[package]
name = "tmkms-nitro-helper"
version = "0.1.2"
authors = [ "Tomas Tauber <2410580+tomtau@users.noreply.github.com>" ]
edition = "2018"

[features]
default = ["main"]
main = ["mz_rusoto_credential", "sysinfo", "aws-sdk-kms", "smithy-types"]

[dependencies]
anomaly = "0.2"
aws-sdk-kms = { git = "https://github.com/awslabs/aws-sdk-rust.git", tag = "v0.0.7-alpha", optional = true}
smithy-types = {git = "https://github.com/awslabs/aws-sdk-rust.git", tag = "v0.0.7-alpha", optional = true}
bytes = "= 0.5"
chrono = "0.4"
ed25519 = { version = "1", features = [ "serde" ] }
ed25519-dalek = "1"
mz_rusoto_credential = { version = "0.46", optional = true }
#mz_rusoto_kms = { version = "0.46", optional = true }
#mz_rusoto_core = { version = "0.46", optional = true }
nix = "0.20"
rand_core = { version = "0.5", features = [ "std" ] }
secrecy = { version = "0.7", features = [ "serde" ] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
structopt = "0.3"
subtle-encoding = { version = "0.5", features = [ "bech32-preview" ] }
sysinfo = { version = "0.18", optional = true }
tempfile = "3"
tendermint = { version = "0.19" }
thiserror = "1"
tmkms-light = { path = "../../.." }
tokio = { version = "1", features = [ "rt", "rt-multi-thread" ] }
tokio2 = { version = "=0.2", package = "tokio", features = [ "rt-core" ] }

toml = "0.5"
tracing = "0.1.25"
tracing-subscriber = "0.2"
tracing-core = "0.1"
vsock = "0.2"
zeroize = "1"
