[package]
name = "tmkms-nitro-helper"
version = "0.2.0"
authors = [ "Tomas Tauber <2410580+tomtau@users.noreply.github.com>" ]
edition = "2018"

[features]
default = ["main"]
main = ["sysinfo", "reqwest", "nitro-cli", "vsock-proxy"]

[dependencies]
anomaly = "0.2"
bytes = "= 0.5"
ctrlc = "3.1"
chrono = "0.4"
crossbeam-channel = "0.5"
ed25519 = { version = "1", features = [ "serde" ] }
ed25519-dalek = "1"
nitro-cli = {git = "https://github.com/aws/aws-nitro-enclaves-cli.git", tag = "v1.0.10", optional = true }
nix = "0.21"
rand_core = { version = "0.6", features = [ "std" ] }
reqwest = { version = "0.11", features = ["blocking", "json"], optional = true}
secrecy = { version = "0.7", features = ["alloc", "serde"] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
structopt = "0.3"
subtle-encoding = { version = "0.5", features = [ "bech32-preview" ] }
sysinfo = { version = "0.18", optional = true }
tempfile = "3"
tendermint = { version = "0.19" }
thiserror = "1"
tmkms-light = { path = "../../.." }
tokio = { version = "1", features = [ "rt" ] }
toml = "0.5"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-core = "0.1"
vsock = "0.2"
vsock-proxy = {git = "https://github.com/aws/aws-nitro-enclaves-cli.git", tag = "v1.0.10", optional = true }
